--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Sulaiman</span>
             <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Certifications/SulaimanZahir94@Gmail.jpg"
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sulaiman 2012.jpg"
                     alt="Sulaiman Image" />
             </span>
         </a>
