--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Sulaiman</span>
             <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sulaiman 2012.jpg"
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sulaimanzahir94-gmail.jpg"
                     alt="Sulaiman Image" />
             </span>
         </a>
@@ -605,7 +605,7 @@
                             <i class="zmdi zmdi-arrow-left"></i>
                         </div>
                         <div class="avatar">
-                            <img src="img/sulaiman 2012.jpg" />
+                            <img src="img/sulaimanzahir94-gmail.jpg" />
                         </div>
                         <div class="name">
                             <span id="name"></span>
