--- a/Pages/Demo.html
+++ b/Pages/Demo.html
@@ -230,7 +230,7 @@
                                 href="https://en.wikipedia.org/wiki/Bachelor_of_Computer_Information_Systems">Bachelor
                                 of Computer Information Systems</a></div>
                         <div>Computer Information Systems - CIS</div>
-                        <p>GPA: 66.44</p>
+                        <!-- <p>GPA: 66.44</p> -->
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">September 2012 - September 2016</span>
