--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     <a href="mailto:sulaimanzahir94@gmail.com"><i class="fas fa-envelope-square"></i>
                         sulaimanzahir94@gmail.com ·</a>
                 </div>
-                <p class="mb-5">I want to join as an ASP.NET web developer in a progressive organization to pursue
-                    professional excellence and contribute my best in the accomplishment of organizational goals. </p>
+                <p class="mb-5">I work hard to gain experience that enables me to master my work in the field of programming and development,
+                     especially as I love this area because of the challenges and learning new things daily. </p>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12">
@@ -150,8 +150,8 @@
                                 <ul>
                                     <li><a href="https://www.facebook.com/aloore" target="_blank"><i
                                                 class="fab fa-facebook-f" aria-hidden="true"></i> </a> </li>
-                                    <li><a href="https://plus.google.com/u/1/104008015380882960960" target="_blank"><i
-                                                class="fab fa-google-plus" aria-hidden="true"></i></a> </li>
+                                    <li><a href="https://wa.me/962780978336" target="_blank"><i
+                                                class="fab fa-whatsapp" aria-hidden="true"></i></a> </li>
                                     <li><a href="https://www.instagram.com/sleman_alouri/" target="_blank"><i
                                                 class="fab fa-instagram" aria-hidden="true"></i></a> </li>
                                     <li><a href="https://twitter.com/Sulaima60256050" target="_blank"><i
@@ -312,8 +312,8 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a software developer, I enjoy most outdoors, and I care to play sport, and I spend
-                    most of my time learning new things, and sometimes I love swimming and video games.</p>
+                <p>Apart from being a software developer, I enjoy most outdoors, and I care to play sport, 
+                    and I spend most of my time learning new things, sometimes I love video games.</p>
             </div>
         </section>
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
@@ -367,7 +367,7 @@
                                         onclick="openModal();currentSlide(1)" />
                                     <img src="img/Certifications/2_jQuery.jpg" href="#lb-gallery3-7"
                                         onclick="openModal();currentSlide(2)" />
-                                    <img src="img/Certifications/3_university.jpg" href="#lb-gallery3-7"
+                                    <img src="img/Certifications/3_English01.jpg" href="#lb-gallery3-7"
                                         onclick="openModal();currentSlide(3)" />
                                     <img src="img/Certifications/4_CSS.jpg" href="#lb-gallery3-7"
                                         onclick="openModal();currentSlide(4)" />
@@ -403,10 +403,9 @@
                     </div>
 
                     <div class="mySlides">
-                        <div class="numbertext">3 / 9</div>
-                        <img src="img/Certifications/3_university.jpg" class="imgMySlides"
-                            alt="My University Certificate" title="My University Certificate" />
-                    </div>
+                            <div class="numbertext">3 / 9</div>
+                            <img src="img/Certifications/3_English01.jpg" class="imgMySlides" alt="English01" title="jQuery">
+                        </div>
 
                     <div class="mySlides">
                         <div class="numbertext">4 / 9</div>
@@ -453,7 +452,7 @@
                         <img class="demo cursor" src="img/Certifications/2_jQuery.jpg" style="width:10%"
                             onclick="currentSlide(2)">
 
-                        <img class="demo cursor" src="img/Certifications/3_university.jpg" style="width:10%"
+                        <img class="demo cursor" src="img/Certifications/3_English01.jpg" style="width:10%"
                             onclick="currentSlide(3)">
 
                         <img class="demo cursor" src="img/Certifications/4_CSS.jpg" style="width:10%"
@@ -531,10 +530,10 @@
                                                 <img src="img/Certifications/2_jQuery.jpg" alt="jQuery"
                                                     title="jQuery" />
                                             </div>
-                                            <div class="carousel-item">
-                                                <img src="img/Certifications/3_university.jpg"
-                                                    alt="My University Certificate" title="My University Certificate" />
-                                            </div>
+                                            <div class="carousel-item active">
+                                                    <img src="img/Certifications/3_English01.jpg" alt="English01"
+                                                        title="English01" />
+                                                </div>
                                             <div class="carousel-item">
                                                 <img src="img/Certifications/4_CSS.jpg" alt="CSS" title="CSS" />
                                             </div>
