Scroll to first section Page index.html
scrolling to the first section using Jquey method

--- a/index.html
+++ b/index.html
@@ -751,6 +751,10 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
 
+        $([document.documentElement, document.body]).animate({
+            scrollTop: $("#about").offset().top
+        }, 2000);
+
         $(window).resize(function () {
 
             if ($(window).width() <= 990) {
