--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             scrollTop: $("#about").offset().top
         }, 2000);
 
-        $(window).resize(function () {
+        // $(window).resize(function () {
 
             if ($(window).width() <= 990) {
 
@@ -775,7 +775,7 @@
                 };
             }
 
-        });
+        // });
 
     </script>
 </body>
