--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
                                                 aria-hidden="true"></i></a> </li>
                                     <li><a href="https://www.instagram.com/sulaiman_zahir94/" target="_blank"><i
                                                 class="fab fa-instagram" aria-hidden="true"></i></a> </li>
-                                    <li><a href="https://twitter.com/Sulaima60256050" target="_blank"><i
-                                                class="fab fa-twitter" aria-hidden="true"></i></a> </li>
+                                    <li><a href="https://www.linkedin.com/in/sulaiman-zahir-3ba0aa11a/" target="_blank"><i
+                                                class="fab fa-linkedin" aria-hidden="true"></i></a> </li>
                                 </ul>
                             </div>
                         </div>
