remove unnecessary issues
remove Less, Python, Atom
I need for real practice not knowledge

--- a/index.html
+++ b/index.html
@@ -1028,10 +1028,10 @@
                                 <i class="devicon-sass-original colored" data-toggle="tooltip" data-placement="top"
                                     data-original-title="Sass"></i>
                             </li>
-                            <li class="list-inline-item">
+                            <!-- <li class="list-inline-item">
                                 <i class="devicon-less-plain-wordmark colored" data-toggle="tooltip"
                                     data-placement="top" data-original-title="Less"></i>
-                            </li>
+                            </li> -->
                             <li class="list-inline-item">
                                 <i class="devicon-javascript-plain colored" data-toggle="tooltip" data-placement="top"
                                     data-original-title="JavaScript"></i>
@@ -1047,11 +1047,11 @@
                         </ul>
                         <p style="color:#1EA4E9">Back End</p>
                         <ul class="list-inline list-icons">
-                            <li class="list-inline-item">
+                            <!-- <li class="list-inline-item">
                             <li class="devicon-python-plain-wordmark colored" data-toggle="tooltip" data-placement="top"
                                 data-original-title="Python" style="display: inline-block;">
                             </li>
-                            </li>
+                            </li> -->
                             <li class="list-inline-item">
                             <li data-toggle="tooltip" data-placement="top" data-original-title="Visual Basic"
                                 style="display: inline-block;">
@@ -1195,10 +1195,10 @@
                                 <i class="devicon-firefox-plain colored" data-toggle="tooltip" data-placement="top"
                                     data-original-title="Fire Fox Developer Edition"></i>
                             </li>
-                            <li class="list-inline-item">
+                            <!-- <li class="list-inline-item">
                                 <i class="devicon-atom-original colored" data-toggle="tooltip" data-placement="top"
                                     data-original-title="Atom"></i>
-                            </li>
+                            </li> -->
                             <li class="list-inline-item">
                             <li style="display:inline-block" data-toggle="tooltip" data-placement="top"
                                 data-original-title="SQL Server Manager System ( SSMS )">
