--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <div class="resume-item">
                             <h4>junior Web Developer</h4>
                             <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <p><em>Integrated Technology group (ITG).</em></p>
                             <ul>
                                 <li>Develop web applications based on Team Foundation Server</li>
                                 <li>Keep the Project Manager and the IT Leads updated on the overall progress of the
