fix QR section height

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             margin-top: -150px;
             margin-left: -150px;
         }
+        #hero .hero-container {
+            margin-left: unset !important;
+        }
     </style>
 </head>
 
@@ -918,7 +921,7 @@
                     </div>
 
                     <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                        <div class="info" style="position: relative;">
+                        <div class="info" style="position: relative;min-height: 600px;">
                             <h4 class="MyPhoneNumber-Label"> You can call me on my phone number throw this code.</h4>
                             <img src="assets/img/Phone Number.png" class="MyPhoneNumber-img" alt="">
                         </div>
